Fix icon floating on smaller screens

--- a/assets/posts/rust-for-rubyists.css
+++ b/assets/posts/rust-for-rubyists.css
@@ -28,7 +28,8 @@
 
 @media (max-width: 520px) {
     .icon {
-        float: right;
+      margin: 0;
+      float: right;
     }
 }
 
